[package]
name = "block-buffer"
version = "0.10.0-pre.4" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Fixed size buffer for block processing of data"
documentation = "https://docs.rs/block-buffer"
repository = "https://github.com/RustCrypto/utils"
keywords = ["block", "buffer"]
categories = ["cryptography", "no-std"]
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
block-padding = { version = "0.3.0-pre",optional = true,git="https://github.com/helin6/TSS.git" }
generic-array = {git="https://github.com/sgx-test/digest-sgx.git"}
[features]
default = [] 
mesalock_sgx = ["sgx_tstd"]
