[package]
name = "block-padding"
version = "0.3.0-pre" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Padding and unpadding of messages divided into blocks."
documentation = "https://docs.rs/block-padding"
repository = "https://github.com/RustCrypto/utils"
keywords = ["padding", "pkcs7", "ansix923", "iso7816"]
categories = ["cryptography", "no-std"]
edition = "2018"

[dependencies]

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
generic-array = {git="https://github.com/sgx-test/digest-sgx.git"}

[features]
default = [] 
mesalock_sgx = ["sgx_tstd"]
