[package]
name = "keccak"
version = "0.1.1"
authors = ["RustCrypto Developers"]
license = "CC0-1.0"
description = "Keccak-f sponge function"
documentation = "https://docs.rs/keccak"
repository = "https://github.com/RustCrypto/sponges"
keywords = ["crypto", "sponge", "keccak-f"]
categories = ["cryptography", "no-std"]

[dependencies] 
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = [] 
mesalock_sgx = ["sgx_tstd"]
no_unroll = []

[badges]
travis-ci = { repository = "RustCrypto/sponges" }
